Support specifying namespace when using admin role
